# omni_fetcher

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  omni_fetcher_v0.3.0_PRD.docx  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: auth.md  fetchers.md  index.md
examples/: 01_basic_usage.py  02_custom_fetcher.py  03_custom_schema.py  04_cli_example.py  05_media_example.py  06_auth_example.py  07_oauth2_example.py  08_s3_auth_example.py  09_atomic_schemas_example.py  10_office_webpage_example.py  11_audio_containers_example.py  12_github_example.py  13_google_drive_example.py  14_notion_example.py  15_confluence_example.py  16_slack_example.py  17_jira_example.py
omni_fetcher/: __init__.py  cli.py  fetcher.py
omni_fetcher/auth/: __init__.py
omni_fetcher/cache/: __init__.py  redis.py
omni_fetcher/core/: exceptions.py  registry.py
omni_fetcher/fetchers/: __init__.py  audio.py  base.py  confluence.py  csv.py  docx.py  github.py  google_drive.py  graphql.py  http_auth.py  http_json.py  http_url.py  jira.py  linear.py  local_file.py  notion.py  pdf.py  pptx.py  rss.py  s3.py  sharepoint.py  slack.py  youtube.py
omni_fetcher/schemas/: __init__.py  atomics.py  base.py  compat.py  confluence.py  containers.py  documents.py  github.py  google.py  jira.py  linear.py  media.py  notion.py  sharepoint.py  slack.py  structured.py
omni_fetcher/utils/: retry.py  tags.py
tests/: __init__.py  conftest.py  test_auth.py  test_auth_integration.py  test_cache_redis.py  test_cli.py
tests/core/: test_registry.py
tests/fetchers/: test_audio.py  test_confluence.py  test_csv.py  test_docx.py  test_fetchers.py  test_github.py  test_google_drive.py  test_graphql.py  test_jira.py  test_linear.py  test_local_file.py  test_notion.py  test_pdf.py  test_pptx.py  test_rss.py  test_s3.py  test_sharepoint.py  test_slack.py  test_webpage.py  (+1 more)
(+12 files in other folders)
